1.add listener for report 2.add example 3.modify pom.xml with add log4j2,allure,lombam