@@ -8,12 +8,23 @@
     <artifactId>SwebTest</artifactId>
     <version>1.0.0</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <allure-testng.version>2.13.0</allure-testng.version>
+        <allure-java-commons.version>2.13.0</allure-java-commons.version>
+        <aspectj.version>1.9.2</aspectj.version>
+        <slf4j-nop.version>1.7.2</slf4j-nop.version>
+        <log4j-core.version>2.12.0</log4j-core.version>
+        <log4j-api.version>2.12.0</log4j-api.version>
+    </properties>
+
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>2.20.1</version>
                 <configuration>
                     <suiteXmlFiles>
                         <!--<suiteXmlFile>suite/smokecase/pbxcore.xml</suiteXmlFile>-->
@@ -29,12 +40,39 @@
                             <value>false</value>
                         </property>-->
                         <!-- Setting ReportNG listeners-->
-                        <property>
-                            <name>listener</name>
-                            <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
-                        </property>
+<!--                        <property>-->
+<!--                            <name>listener</name>-->
+<!--                            <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>-->
+<!--                        </property>-->
+
+                        <argLine>
+                            -Dfile.encoding=UTF-8 -Xmx1024m -Xms1024m -XX:PermSize=1024 -XX:MaxPermSize=1024
+                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        </argLine>
+
+                        <workingDirectory>${project.build.directory}</workingDirectory>
+
+                        <!--  让allure-results，在tagget文件下生成-->
+                        <systemProperties>
+                            <property>
+                                <name>allure.results.directory</name>
+                                <value>./allure-results</value>
+                            </property>
+                            <!--<property>-->
+                            <!--<name>allure.link.issue.pattern</name>-->
+                            <!--<value>https://example.org/issue/{}</value>-->
+                            <!--</property>-->
+                        </systemProperties>
                     </properties>
                 </configuration>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -60,6 +98,46 @@
     </build>
 
     <dependencies>
+
+        <!-- import log4j2 jar start -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>${slf4j-nop.version}</version>
+        </dependency>
+        <!-- import log4j2 jar  end -->
+
+        <!-- import allure jar start -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure-testng.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>${allure-java-commons.version}</version>
+        </dependency>
+        <!-- import log4j2 jar  end -->
 
         <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
         <dependency>
@@ -122,11 +200,11 @@
         <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.21</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-log4j12</artifactId>-->
+<!--            <version>1.7.21</version>-->
+<!--        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/ch.ethz.ganymed/ganymed-ssh2 -->
         <dependency>
@@ -134,6 +212,7 @@
             <artifactId>ganymed-ssh2</artifactId>
             <version>262</version>
         </dependency>
+
     </dependencies>
 
 </project>
